--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
 	</style>
 </head>
 <body>
-	<header  id="nav">
-		<ul>
-		<dev  id="firstarm">
+	<header>
+		<p id="nav">
 			<a href="index.html"><img src="src/image/logo.png" id="logo" /></a>
-			<li id="logotext"><a href="index.html">M.C.B.R.P</a></li>
-			<li id="firstpage"><a href="index.html">首页</a></li>
-		</dev>
-		<dev  id="secondarm">
-			<li id="tel"><a href="tel/index.html">联系我们</a></li>
-			<li id="mysrc"><a href="#">我的资源</a></li>
-			<li id="language"><a href="index-en.html">English</a></li>
-			<li id="login"><a href="login/login.html">登录/注册</a></li>
-		</dev>
+			<a href="index.html">M.C.B.R.P</a>
+			<dev id="g1"></dev>
+			<a href="index.html">首页</a>
+			<dev id="g2"></dev>
+			<dev id="g3"></dev>
+			<a href="tel/index.html">联系我们</a>
+			<dev id="g4"></dev>
+			<a href="#">我的资源</a>
+			<dev id="g5"></dev>
+			<a href="index-en.html">English</a>
+			<dev id="g6"></dev>
+			<a href="login/login.html">登录/注册</a>
+		</p>
 		</ul>
 	</header>
 	<bodier>
